# rustflix

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile.backend  LICENSE  README.md  VERIFICATION_REPORT.md  config.toml  docker-compose.yml  memory.md  progress.md  simple_auth_server.py
crates/rustflix-api/: Cargo.toml
crates/rustflix-api/src/: auth.rs  handlers.rs  lib.rs  middleware.rs  routes.rs  websocket.rs
crates/rustflix-auth/: Cargo.toml
crates/rustflix-auth/src/: jwt.rs  lib.rs  middleware.rs  password.rs  session.rs
crates/rustflix-config/: Cargo.toml
crates/rustflix-config/src/: lib.rs  loader.rs  validator.rs  watcher.rs
crates/rustflix-core/: Cargo.toml
crates/rustflix-core/src/: config.rs  error.rs  events.rs  lib.rs  media.rs  metadata.rs  streaming.rs  user.rs
crates/rustflix-database/: Cargo.toml
crates/rustflix-database/migrations/: 001_initial_schema.sql
crates/rustflix-database/src/: cache.rs  connection.rs  lib.rs  migrations.rs  models.rs
crates/rustflix-database/src/repositories/: media.rs  metadata.rs  mod.rs  streaming.rs  user.rs
crates/rustflix-media-library/: Cargo.toml
crates/rustflix-media-library/src/: analyzer.rs  lib.rs  scanner.rs  watcher.rs
crates/rustflix-metadata/: Cargo.toml
crates/rustflix-metadata/src/: cache.rs  lib.rs  omdb.rs  providers.rs  tmdb.rs
crates/rustflix-monitoring/: Cargo.toml
crates/rustflix-monitoring/src/: alerts.rs  health.rs  lib.rs  logging.rs  metrics.rs
crates/rustflix-plugins/: Cargo.toml
crates/rustflix-plugins/src/: api.rs  lib.rs  loader.rs  manager.rs  runtime.rs
crates/rustflix-server/: Cargo.toml
crates/rustflix-server/src/: main.rs
crates/rustflix-streaming/: Cargo.toml
crates/rustflix-streaming/src/: dash.rs  hls.rs  lib.rs  streamer.rs  transcoder.rs
frontend/: jest.config.js  next.config.mjs  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/auth/login/: page.tsx
frontend/src/app/auth/register/: page.tsx
frontend/src/app/movies/: page.tsx
frontend/src/app/movies/[id]/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/simple/: page.tsx
frontend/src/app/test/: page.tsx
frontend/src/app/tv/: page.tsx
frontend/src/app/watchlist/: page.tsx
frontend/src/app/working/: layout.tsx  page.tsx
frontend/src/components/__tests__/: Button.test.tsx
frontend/src/components/layout/: Header.tsx  Layout.tsx
frontend/src/components/media/: MediaCard.tsx  MediaGrid.tsx  SearchFilters.tsx  VideoPlayer.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  Input.tsx  Modal.tsx
frontend/src/contexts/: AuthContext.tsx  ThemeContext.tsx
frontend/src/hooks/: useMediaQuery.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/types/: index.ts
