[workspace]
members = [
    "crates/rustflix-core",
    "crates/rustflix-database",
    "crates/rustflix-media-library",
    "crates/rustflix-metadata",
    "crates/rustflix-streaming",
    "crates/rustflix-auth",
    "crates/rustflix-api",
    "crates/rustflix-plugins",
    "crates/rustflix-config",
    "crates/rustflix-monitoring",
    "crates/rustflix-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["RustFlix Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustflix/rustflix"
homepage = "https://rustflix.dev"
description = "High-performance media server written in Rust"
keywords = ["media", "streaming", "server", "jellyfin", "rust"]
categories = ["multimedia", "web-programming::http-server"]

[workspace.dependencies]
# Async runtime and utilities
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"

# Web framework and HTTP
axum = { version = "0.7", features = ["ws", "multipart", "macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"  # MessagePack

# Error handling and logging
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
bytes = "1.5"
mime = "0.3"

# Configuration
config = "0.14"
clap = { version = "4.4", features = ["derive"] }

# Crypto and security
argon2 = "0.5"
jsonwebtoken = "9.2"
rand = "0.8"

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }

# File system and path utilities
walkdir = "2.4"
notify = "6.1"
tempfile = "3.8"

# Image processing
image = "0.24"

# Media processing (FFmpeg bindings)
ffmpeg-next = "6.1"

# Metrics and monitoring
prometheus = "0.13"
metrics = "0.22"

# Plugin system (WebAssembly)
wasmtime = "15.0"
wasi-common = "15.0"

# Testing
mockall = "0.12"
wiremock = "0.5"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
debug = false
split-debuginfo = "off"
debug-assertions = false
overflow-checks = false
lto = "thin"
panic = "abort"
incremental = false
codegen-units = 1

[profile.release-with-debug]
inherits = "release"
debug = true
split-debuginfo = "packed"
