[package]
name = "rustflix-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "REST and WebSocket API layer for RustFlix"

[dependencies]
# Core dependencies
rustflix-core = { path = "../rustflix-core" }
rustflix-database = { path = "../rustflix-database" }
rustflix-auth = { path = "../rustflix-auth" }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
