[package]
name = "rustflix-monitoring"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Monitoring, metrics, and health checks for RustFlix"

[dependencies]
# Core dependencies
rustflix-core = { path = "../rustflix-core" }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Metrics
prometheus = { workspace = true }
metrics = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
